Added HTML injection for common elements

--- a/index.html
+++ b/index.html
@@ -10,72 +10,10 @@
     <title>pavlos-web-bootstrap</title>
 </head>
 <body>
-<!-- Bootstrap Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow">
-    <div class="container-fluid">
-        <!-- Logo -->
-        <a class="navbar-brand mb-0 h1 d-flex align-items-center" href="#">
-            <img src="./assets/taxi-logo.png" alt="Taxi Logo" width="40" height="40" class="me-2">
-            <div class="d-flex flex-column">
-                <span>Paul's Airport Taxi</span>
-                <span class="small text-muted">Premium Transfer Service</span>
-            </div>
-        </a>
-        <!-- Collapsible menu -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Navbar options -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Airport Transfers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Fleet</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
-            <!-- Language Select -->
-            <div class="d-flex justify-content-end align-items-center ms-auto">
-                <button type="button" class="btn btn-link text-secondary fs-4 p-0 ms-3" data-bs-toggle="modal"
-                        data-bs-target="#languageModal" aria-label="Select Language">
-                    <i class="bi bi-translate"></i>
-                </button>
-            </div>
-        </div>
-    </div>
-</nav>
-<!-- Navbar end -->
+<!-- Navbar injection will occur from main.js -->
 
-<!-- Language Modal -->
-<div class="modal fade" id="languageModal" tabindex="-1" aria-labelledby="languageModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="languageModalLabel">Select Language</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <ul class="list-group">
-                    <li class="list-group-item list-group-item-action">English – EN</li>
-                    <li class="list-group-item list-group-item-action">Russian – RU</li>
-                    <li class="list-group-item list-group-item-action">Hebrew – HE</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- End Language Modal -->
+<!-- Language Modal injection -->
+<div id="language-modal-container"></div>
 
 <!-- Page subject section -->
 <div class="container-fluid text-light d-flex align-items-center justify-content-left"
@@ -225,63 +163,13 @@
 </div>
 <!-- End Transparent Pricing section -->
 
-<!-- WhatsApp Bubble -->
-<a href="https://wa.me/35796699870" target="_blank" rel="noopener"
-   style="position: fixed; bottom: 2rem; right: 2rem; z-index: 1050; background: white; border-radius: 50%;
-    box-shadow: 0 0.125rem 0.5rem rgba(0,0,0,0.15); width: 4rem; height: 4rem; display: flex; align-items: center;
-    justify-content: center;" aria-label="Contact us on WhatsApp">
-    <img src="./assets/WhatsApp_Logo_green.svg" alt="WhatsApp" width="40" height="40" style="display: block;"/>
-</a>
-<!-- End WhatsApp Bubble -->
+<!-- WhatsApp Bubble injection -->
+<div id="whatsapp-bubble-container"></div>
 
-<!-- Footer section -->
-<footer class="bg-dark border-top text-light">
-    <div class="container py-5">
-        <div class="row">
-            <!-- Column 1: Logo and Description -->
-            <div class="col-12 col-md-4 mb-4 mb-md-0 d-flex flex-column align-items-md-start align-items-center">
-                <div class="d-flex align-items-center mb-2">
-                    <img src="./assets/taxi-logo.png" alt="Taxi Logo" width="40" height="40" class="me-2">
-                    <div class="d-flex flex-column">
-                        <span class="fw-bold text-light">Paul's Airport Taxi</span>
-                        <span class="small text-secondary">Premium Transfer Service</span>
-                    </div>
-                </div>
-                <p class="mb-0 text-secondary text-center text-md-start">
-                    Professional airport transfers and premium transportation services.
-                </p>
-            </div>
-            <!-- Column 2: Quick Links -->
-            <div class="col-12 col-md-4 mb-4 mb-md-0">
-                <h6 class="fw-bold mb-3 text-light">Quick Links</h6>
-                <ul class="list-unstyled">
-                    <li><a href="#" class="text-decoration-none text-light">Home</a></li>
-                    <li><a href="#" class="text-decoration-none text-light">Services</a></li>
-                    <li><a href="#" class="text-decoration-none text-light">Fleet</a></li>
-                    <li><a href="#" class="text-decoration-none text-light">Contact</a></li>
-                </ul>
-            </div>
-            <!-- Column 3: Contact Info -->
-            <div class="col-12 col-md-4">
-                <h6 class="fw-bold mb-3 text-light">Contact Info</h6>
-                <ul class="list-unstyled mb-0">
-                    <li class="mb-2"><i class="bi bi-whatsapp me-2 text-success"></i>WhatsApp:
-                        <a href="https://wa.me/35796699870" class="text-decoration-none text-light">+357 96 699 870</a>
-                    </li>
-                    <li class="mb-2"><i class="bi bi-telephone me-2 text-primary"></i>Phone:
-                        <a href="tel:+35796699870" class="text-decoration-none text-light">+357 96 699 870</a></li>
-                    <li><i class="bi bi-envelope me-2 text-warning"></i>
-                        <a href="mailto:paul@airporttaxi.com" class="text-decoration-none text-light">paul@airporttaxi.com</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- End Footer section -->
+<!-- Footer injection-->
+<div id="footer-container"></div>
 
-<!--    <div id="app"></div>-->
-<!--    <script type="module" src="./src/main.js"></script>-->
+<script type="module" src="./src/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous">
