--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link href="/css/custom-cards.css" rel="stylesheet">
     <title>pavlos-web-bootstrap</title>
 </head>
 <body>
 <!-- Navbar component -->
-<app-navbar></app-navbar>
+<div id="navbar"></div>
 
 <!-- Language Modal component (global) -->
-<app-language-modal></app-language-modal>
+<div id="language-modal"></div>
 
 <!-- Page subject section -->
 <div class="container-fluid text-light d-flex align-items-center justify-content-left"
@@ -31,7 +32,7 @@
 <!-- Page subject section -->
 
 <!-- How It Works section -->
-<div class="container-fluid bg-light text-dark d-flex flex-column align-items-center justify-content-center py-5"
+<div class="container-fluid bg-light text-dark d-flex flex-column align-items-center justify-content-center pt-5 pb-2"
      style="min-height: 40vh;">
     <h2 class="display-6 fw-bold mb-3">How It Works</h2>
     <p class="lead fs-5 text-center">Simple steps to book your premium airport transfer</p>
@@ -42,7 +43,7 @@
 <div class="container-fluid pb-5 bg-light">
     <div class="row justify-content-center g-4">
         <div class="col-12 col-md-6 col-lg-3">
-            <div class="card h-100 shadow-sm border-0">
+            <div class="card h-100 shadow-sm pav-feature-card">
                 <div class="card-body d-flex align-items-center text-center">
                     <div class="bg-warning" style="width:0.375rem; height:100%; border-radius:4px;"></div>
                     <div class="flex-grow-1 ms-3">
@@ -56,7 +57,7 @@
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
-            <div class="card h-100 shadow-sm border-0">
+            <div class="card h-100 shadow-sm pav-feature-card">
                 <div class="card-body d-flex align-items-center text-center">
                     <div class="bg-warning" style="width:0.375rem; height:100%; border-radius:4px;"></div>
                     <div class="flex-grow-1 ms-3">
@@ -70,7 +71,7 @@
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
-            <div class="card h-100 shadow-sm border-0">
+            <div class="card h-100 shadow-sm pav-feature-card">
                 <div class="card-body d-flex align-items-center text-center">
                     <div class="bg-warning" style="width:0.375rem; height:100%; border-radius:4px;"></div>
                     <div class="flex-grow-1 ms-3">
@@ -84,7 +85,7 @@
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
-            <div class="card h-100 shadow-sm border-0">
+            <div class="card h-100 shadow-sm pav-feature-card">
                 <div class="card-body d-flex align-items-center text-center">
                     <div class="bg-warning" style="width:0.375rem; height:100%; border-radius:4px;"></div>
                     <div class="flex-grow-1 ms-3">
@@ -147,7 +148,7 @@
 <div class="container-fluid bg-light py-5">
     <div class="row justify-content-center">
         <div class="col-12 col-md-10 col-lg-8">
-            <div class="card shadow-lg border-0 text-center p-4">
+            <div class="card shadow-lg text-center p-4 pav-feature-card">
                 <div class="card-body">
                     <i class="bi bi-cash-coin text-success fs-1 mb-3"></i>
                     <h2 class="fw-bold mb-3">Transparent Pricing</h2>
@@ -165,10 +166,10 @@
 <!-- End Transparent Pricing section -->
 
 <!-- WhatsApp Bubble component -->
-<app-whatsapp-bubble href="https://wa.me/35796699870"></app-whatsapp-bubble>
+<div id="whatsapp-bubble"></div>
 
 <!-- Footer component -->
-<app-footer></app-footer>
+<div id="footer"></div>
 
 <script type="module" src="./src/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
