Fixed layout issue on fleet.html

--- a/fleet.html
+++ b/fleet.html
@@ -194,7 +194,7 @@
     <!-- End Fleet Features Pills Card -->
 
     <!-- Call to Action Card -->
-    <div class="container-fuild bg-light py-5">
+    <div class="container-fluid bg-light py-5">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-8">
                 <div class="card shadow-lg text-center p-4 pav-feature-card">
