Reduces 'How it works' size in fleet.html

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 <!-- Page subject section -->
 
 <!-- How It Works section -->
-<div class="container-fluid bg-light text-dark d-flex flex-column align-items-center justify-content-center pt-5 pb-2"
-     style="min-height: 40vh;">
+<div class="container-fluid bg-light text-dark d-flex flex-column align-items-center justify-content-center pt-5 pb-2">
     <h2 class="display-6 fw-bold mb-3">How It Works</h2>
     <p class="lead fs-5 text-center">Simple steps to book your premium airport transfer</p>
 </div>
