Modify main section background color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- Page subject section -->
 <div class="container-fluid text-light d-flex align-items-center justify-content-left"
-     style="min-height: 55vh; background: linear-gradient(135deg, #585859 0%, #9cc1df 100%);">
+     style="min-height: 55vh; background: linear-gradient(135deg, #585859 0%, #7dbef3 100%);">
     <div class="text-left">
         <h1 class="display-4 fw-bold mb-4">Airport Transfers</h1>
         <p class="lead fs-4">
