Modified fleet.html heading

--- a/fleet.html
+++ b/fleet.html
@@ -20,10 +20,10 @@
     <div class="container-fluid text-light d-flex align-items-center justify-content-left"
          style="min-height: 55vh; background: linear-gradient(135deg, #585859 0%, #7dbef3 100%);">
         <div class="text-left">
-            <h1 class="display-4 fw-bold mb-4">Our Premium Fleet</h1>
+            <h1 class="display-4 fw-bold mb-4">Our Fleet</h1>
             <p class="lead fs-4">
-                Travel in luxury and comfort with our carefully maintained Mercedes vehicles from Larnaca Airport.<br>
-                Premium transportation for all your Cyprus travel needs.
+                Premium Mercedes vehicles for airport transfers and local rides.
+                Comfort, safety, and style for every journey.
             </p>
         </div>
     </div>
