--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/css/custom-cards.css" rel="stylesheet">
-    <title>Contact Us - Paul's Taxi</title>
+    <title>Contact Us | Paul's Taxi</title>
 </head>
 <body>
 <!-- Navbar component -->
