--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/css/custom-cards.css" rel="stylesheet">
-    <title>Paul's Taxi</title>
+    <title>Paul's Airport Taxi | Premium Taxi Services</title>
 </head>
 <body>
 <!-- Navbar component -->
@@ -17,152 +17,168 @@
 <!-- Language Modal component (global) -->
 <div id="language-modal"></div>
 
-<!-- Page subject section -->
-<div class="container-fluid text-light d-flex align-items-center justify-content-left"
-     style="min-height: 55vh; background: linear-gradient(135deg, #585859 0%, #7dbef3 100%);">
-    <div class="text-left">
-        <h1 class="display-4 fw-bold mb-4">Airport Transfers</h1>
-        <p class="lead fs-4">
-            Paul's Airport Taxi offers reliable, punctual airport transfers from Larnaca Airport.
-            <br>
-            Professional drivers and premium Mercedes vehicles for stress-free transportation.
-        </p>
-    </div>
-</div>
-<!-- Page subject section -->
-
-<!-- How It Works section -->
-<div class="container-fluid bg-light text-dark d-flex flex-column align-items-center justify-content-center pt-5 pb-2">
-    <h2 class="display-6 fw-bold mb-3">How It Works</h2>
-    <p class="lead fs-5 text-center">Simple steps to book your premium airport transfer</p>
-</div>
-<!-- End How It Works section -->
-
-<!-- How It Works Panels -->
-<div class="container-fluid pb-5 bg-light">
-    <div class="row justify-content-center g-4">
-        <div class="col-12 col-md-6 col-lg-3">
-            <div class="card h-100 shadow-sm pav-feature-card">
-                <div class="card-body d-flex align-items-center text-center">
-                    <div class="bg-warning" style="width:0.375rem; height:100%; border-radius:4px;"></div>
-                    <div class="flex-grow-1 ms-3">
-                        <div class="fw-bold rounded-circle bg-info text-white d-inline-flex align-items-center justify-content-center mb-2"
-                             style="width:2.5rem;height:2.5rem;font-size:1.25rem;">1
-                        </div>
-                        <h5 class="card-title fw-bold">Send Message</h5>
-                        <p class="card-text small">Contact us via WhatsApp with your flight details and requirements</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-3">
-            <div class="card h-100 shadow-sm pav-feature-card">
-                <div class="card-body d-flex align-items-center text-center">
-                    <div class="bg-warning" style="width:0.375rem; height:100%; border-radius:4px;"></div>
-                    <div class="flex-grow-1 ms-3">
-                        <div class="fw-bold rounded-circle bg-info text-white d-inline-flex align-items-center justify-content-center mb-2"
-                             style="width:2.5rem;height:2.5rem;font-size:1.25rem;">2
-                        </div>
-                        <h5 class="card-title fw-bold">Get Quote</h5>
-                        <p class="card-text small">Receive instant pricing and confirm your booking details</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-3">
-            <div class="card h-100 shadow-sm pav-feature-card">
-                <div class="card-body d-flex align-items-center text-center">
-                    <div class="bg-warning" style="width:0.375rem; height:100%; border-radius:4px;"></div>
-                    <div class="flex-grow-1 ms-3">
-                        <div class="fw-bold rounded-circle bg-info text-white d-inline-flex align-items-center justify-content-center mb-2"
-                             style="width:2.5rem;height:2.5rem;font-size:1.25rem;">3
-                        </div>
-                        <h5 class="card-title fw-bold">Flight Monitoring</h5>
-                        <p class="card-text small">We track your flight status and adjust pickup time accordingly</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-3">
-            <div class="card h-100 shadow-sm pav-feature-card">
-                <div class="card-body d-flex align-items-center text-center">
-                    <div class="bg-warning" style="width:0.375rem; height:100%; border-radius:4px;"></div>
-                    <div class="flex-grow-1 ms-3">
-                        <div class="fw-bold rounded-circle bg-info text-white d-inline-flex align-items-center justify-content-center mb-2"
-                             style="width:2.5rem;height:2.5rem;font-size:1.25rem;">4
-                        </div>
-                        <h5 class="card-title fw-bold">Meet & Greet</h5>
-                        <p class="card-text small">Your driver will be waiting with a name sign at the designated
-                            meeting point</p>
-                    </div>
-                </div>
-            </div>
+<!-- Hero Section -->
+<div id="hero-section" class="container-fluid text-light d-flex align-items-center justify-content-center position-relative"
+     style="min-height: 100vh; background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/airport_background.png') no-repeat center center; background-size: cover;">
+    <div class="position-absolute top-0 start-0 p-4">
+        <div class="d-flex flex-row align-items-center">
+            <span class="d-flex align-items-center me-4">
+                <i class="bi bi-geo-alt-fill text-warning me-2"></i>
+                <span>Larnaca</span>
+            </span>
+            <span class="d-flex align-items-center">
+                <i class="bi bi-telephone-fill text-warning me-2"></i>
+                <a href="tel:+35796699870" class="text-light text-decoration-none">+357 96699870</a>
+            </span>
         </div>
     </div>
-</div>
-<!-- End How It Works Panels -->
-
-<!-- Premium Airport Service section -->
-<div class="container-fluid bg-white py-5">
-    <div class="row justify-content-start">
-        <div class="col-12 col-lg-8">
-            <h2 class="fw-bold mb-3 text-start">Premium Airport Service</h2>
-            <p class="fs-5 text-start mb-4">Every aspect of your airport transfer is carefully managed to ensure a
-                smooth, stress-free experience from door to gate.</p>
-            <div class="d-flex flex-column gap-3">
-                <div class="d-flex align-items-start gap-3">
-                    <i class="bi bi-airplane-engines-fill text-primary fs-3"></i>
-                    <div class="text-start">
-                        <div class="fw-bold">Flight Monitoring</div>
-                        <div class="small">Real-time flight tracking ensures we're there when you land, even if your
-                            flight is early or delayed.
-                        </div>
-                    </div>
-                </div>
-                <div class="d-flex align-items-start gap-3">
-                    <i class="bi bi-person-badge-fill text-success fs-3"></i>
-                    <div class="text-start">
-                        <div class="fw-bold">Meet & Greet</div>
-                        <div class="small">Professional driver waiting with a name sign at arrivals, ready to help
-                            with luggage and guide you to your vehicle.
-                        </div>
-                    </div>
-                </div>
-                <div class="d-flex align-items-start gap-3">
-                    <i class="bi bi-bag-check-fill text-warning fs-3"></i>
-                    <div class="text-start">
-                        <div class="fw-bold">Luggage Assistance</div>
-                        <div class="small">Complimentary luggage assistance from arrival hall to vehicle, making your
-                            journey effortless.
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="text-center">
+        <h1 class="display-3 fw-bold mb-4">Premium Airport Transfers & Taxi Services</h1>
+        <p class="lead fs-3">Reliable, professional, and luxurious transportation in Cyprus.</p>
+        <a href="https://wa.me/35796699870" target="_blank" rel="noopener" class="btn btn-warning btn-lg px-5 fw-bold">
+            Book Now
+        </a>
     </div>
 </div>
-<!-- End Premium Airport Service section -->
+<!-- End Hero Section -->
 
-<!-- Transparent Pricing section -->
+<!-- Services Section -->
 <div class="container-fluid bg-light py-5">
-    <div class="row justify-content-center">
-        <div class="col-12 col-md-10 col-lg-8">
-            <div class="card shadow-lg text-center p-4 pav-feature-card">
-                <div class="card-body">
-                    <i class="bi bi-cash-coin text-success fs-1 mb-3"></i>
-                    <h2 class="fw-bold mb-3">Transparent Pricing</h2>
-                    <p class="fs-5 mb-4">Get instant quotes via WhatsApp with no hidden fees. Our pricing includes all
-                        services: flight monitoring, meet &amp; greet, luggage assistance, and premium vehicle.</p>
-                    <a href="https://wa.me/35796699870" target="_blank" rel="noopener"
-                       class="btn btn-warning btn-lg px-4">
-                        Get quote
-                    </a>
+    <div class="container">
+        <div class="text-center mb-5">
+            <h2 class="display-6 fw-bold">Our Services</h2>
+            <p class="lead">Comprehensive transportation solutions for every need.</p>
+        </div>
+        <div class="row g-4 justify-content-center">
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm pav-feature-card">
+                    <div class="card-body text-center">
+                        <i class="bi bi-airplane-engines-fill text-warning fs-1 mb-3"></i>
+                        <h5 class="card-title fw-bold">Airport Transfers</h5>
+                        <p class="card-text">Punctual and reliable transfers from Larnaca Airport with flight monitoring.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm pav-feature-card">
+                    <div class="card-body text-center">
+                        <i class="bi bi-geo-alt-fill text-warning fs-1 mb-3"></i>
+                        <h5 class="card-title fw-bold">Local Rides</h5>
+                        <p class="card-text">Convenient and comfortable transportation for your daily needs.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm pav-feature-card">
+                    <div class="card-body text-center">
+                        <i class="bi bi-binoculars-fill text-warning fs-1 mb-3"></i>
+                        <h5 class="card-title fw-bold">Private Tours</h5>
+                        <p class="card-text">Explore Cyprus with our customized private tours.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 shadow-sm pav-feature-card">
+                    <div class="card-body text-center">
+                        <i class="bi bi-briefcase-fill text-warning fs-1 mb-3"></i>
+                        <h5 class="card-title fw-bold">Corporate Travel</h5>
+                        <p class="card-text">Professional and discreet service for business travelers.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- End Transparent Pricing section -->
+<!-- End Services Section -->
+
+<!-- Fleet Section -->
+<div class="container-fluid py-5">
+    <div class="container">
+        <div class="text-center mb-5">
+            <h2 class="display-6 fw-bold">Our Fleet</h2>
+            <p class="lead">Travel in comfort and style with our premium Mercedes-Benz vehicles.</p>
+        </div>
+        <div class="row g-4 justify-content-center">
+            <div class="col-md-6">
+                <div class="card h-100 shadow-lg pav-feature-card">
+                    <div class="card-body">
+                        <h3 class="fw-bold mb-2">Mercedes V-Class</h3>
+                        <p class="lead mb-0">Up to 7 passengers, perfect for families and groups.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card h-100 shadow-lg pav-feature-card">
+                    <div class="card-body">
+                        <h3 class="fw-bold mb-2">Mercedes E-Class</h3>
+                        <p class="lead mb-0">Up to 4 passengers, ideal for business and executive travel.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Fleet Section -->
+
+<!-- Why Choose Us Section -->
+<div class="container-fluid bg-light py-5">
+    <div class="container">
+        <div class="text-center mb-5">
+            <h2 class="display-6 fw-bold">Why Choose Us?</h2>
+            <p class="lead">Your satisfaction is our priority.</p>
+        </div>
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="d-flex">
+                    <i class="bi bi-patch-check-fill text-success fs-2 me-3"></i>
+                    <div>
+                        <h5 class="fw-bold">Safety & Reliability</h5>
+                        <p>Our professional drivers and regularly maintained vehicles ensure a safe and reliable journey.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="d-flex">
+                    <i class="bi bi-gem text-primary fs-2 me-3"></i>
+                    <div>
+                        <h5 class="fw-bold">Luxury & Comfort</h5>
+                        <p>Travel in style with our premium Mercedes-Benz fleet, featuring leather interiors and climate control.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="d-flex">
+                    <i class="bi bi-clock-history text-secondary fs-2 me-3"></i>
+                    <div>
+                        <h5 class="fw-bold">24/7 Availability</h5>
+                        <p>We are available around the clock to meet your transportation needs, anytime and anywhere.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Why Choose Us Section -->
+
+<!-- Call to Action Section -->
+<div class="container-fluid py-5">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card shadow-lg text-center p-4 pav-feature-card">
+                    <div class="card-body">
+                        <h2 class="fw-bold mb-3">Ready for a Stress-Free Ride?</h2>
+                        <p class="fs-5 mb-4">Contact us via WhatsApp for an instant quote and book your premium taxi service today.</p>
+                        <a href="https://wa.me/35796699870" target="_blank" rel="noopener" class="btn btn-warning btn-lg px-5 fw-bold">
+                            Book Now
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Call to Action Section -->
 
 <!-- WhatsApp Bubble component -->
 <div id="whatsapp-bubble"></div>
