--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/css/custom-cards.css" rel="stylesheet">
+    <link href="/css/scroll-animation.css" rel="stylesheet">
     <title>Paul's Airport Taxi | Premium Taxi Services</title>
 </head>
 <body>
@@ -43,7 +44,7 @@
 <!-- End Hero Section -->
 
 <!-- Services Section -->
-<div class="container-fluid bg-light py-5">
+<div class="container-fluid bg-light py-5 scroll-animate">
     <div class="container">
         <div class="text-center mb-5">
             <h2 class="display-6 fw-bold">Our Services</h2>
@@ -92,7 +93,7 @@
 <!-- End Services Section -->
 
 <!-- Fleet Section -->
-<div class="container-fluid py-5">
+<div class="container-fluid py-5 scroll-animate">
     <div class="container">
         <div class="text-center mb-5">
             <h2 class="display-6 fw-bold">Our Fleet</h2>
@@ -121,7 +122,7 @@
 <!-- End Fleet Section -->
 
 <!-- Why Choose Us Section -->
-<div class="container-fluid bg-light py-5">
+<div class="container-fluid bg-light py-5 scroll-animate">
     <div class="container">
         <div class="text-center mb-5">
             <h2 class="display-6 fw-bold">Why Choose Us?</h2>
@@ -161,7 +162,7 @@
 <!-- End Why Choose Us Section -->
 
 <!-- Call to Action Section -->
-<div class="container-fluid py-5">
+<div class="container-fluid py-5 scroll-animate">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
