Added scroll animation to all pages

--- a/fleet.html
+++ b/fleet.html
@@ -8,6 +8,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/css/custom-cards.css" rel="stylesheet">
+    <link href="/css/scroll-animation.css" rel="stylesheet">
     <title>Fleet | Paul's Airport Taxi</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
     <div id="language-modal"></div>
 
     <!-- Premium Fleet section -->
-    <div class="container-fluid text-light d-flex align-items-center justify-content-left"
+    <div class="container-fluid text-light d-flex align-items-center justify-content-left scroll-animate"
          style="min-height: 55vh; background: linear-gradient(135deg, #585859 0%, #7dbef3 100%);">
         <div class="text-left">
             <h1 class="display-4 fw-bold mb-4">Our Fleet</h1>
@@ -30,7 +31,7 @@
     <!-- End Premium Fleet section -->
 
     <!-- Fleet Features Pills Card -->
-    <div class="container-fluid py-4 bg-light">
+    <div class="container-fluid py-4 bg-light scroll-animate">
         <div class="row justify-content-start">
             <div class="col-12 col-lg-8">
                 <div class="card bg-light shadow pav-feature-card">
@@ -135,7 +136,7 @@
         <!-- End Executive Sedan Card -->
 
         <!-- Fleet Standards Section -->
-        <div class="container-fluid pt-4 pb-3 my-4 bg-white">
+        <div class="container-fluid pt-4 pb-3 my-4 bg-white scroll-animate">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-10">
                     <h2 class="display-6 fw-bold text-center mb-3">Fleet Standards</h2>
@@ -148,7 +149,7 @@
         <!-- End Fleet Standards Section -->
 
         <!-- Fleet Quality Features Section -->
-        <div class="container-fluid pb-4 bg-white">
+        <div class="container-fluid pb-4 bg-white scroll-animate">
             <div class="row justify-content-center g-4">
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="d-flex flex-column align-items-center text-center h-100">
@@ -194,7 +195,7 @@
     <!-- End Fleet Features Pills Card -->
 
     <!-- Call to Action Card -->
-    <div class="container-fluid bg-light py-5">
+    <div class="container-fluid bg-light py-5 scroll-animate">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-8">
                 <div class="card shadow-lg text-center p-4 pav-feature-card">
@@ -228,4 +229,3 @@
     </script>
 </body>
 </html>
-
