--- a/airport-transfers.html
+++ b/airport-transfers.html
@@ -8,6 +8,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/css/custom-cards.css" rel="stylesheet">
+    <link href="/css/scroll-animation.css" rel="stylesheet">
     <title>Airport Transfer | Paul's Taxi</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
 <div id="language-modal"></div>
 
 <!-- Page subject section -->
-<div class="container-fluid text-light d-flex align-items-center justify-content-left"
+<div class="container-fluid text-light d-flex align-items-center justify-content-left scroll-animate"
      style="min-height: 55vh; background: linear-gradient(135deg, #585859 0%, #7dbef3 100%);">
     <div class="text-left">
         <h1 class="display-4 fw-bold mb-4">Airport Transfers</h1>
@@ -32,14 +33,14 @@
 <!-- Page subject section -->
 
 <!-- How It Works section -->
-<div class="container-fluid bg-light text-dark d-flex flex-column align-items-center justify-content-center pt-5 pb-2">
+<div class="container-fluid bg-light text-dark d-flex flex-column align-items-center justify-content-center pt-5 pb-2 scroll-animate">
     <h2 class="display-6 fw-bold mb-3">How It Works</h2>
     <p class="lead fs-5 text-center">Simple steps to book your premium airport transfer</p>
 </div>
 <!-- End How It Works section -->
 
 <!-- How It Works Panels -->
-<div class="container-fluid pb-5 bg-light">
+<div class="container-fluid pb-5 bg-light scroll-animate">
     <div class="row justify-content-center g-4">
         <div class="col-12 col-md-6 col-lg-3">
             <div class="card h-100 shadow-sm pav-feature-card">
@@ -103,7 +104,7 @@
 <!-- End How It Works Panels -->
 
 <!-- Premium Airport Service section -->
-<div class="container-fluid bg-white py-5">
+<div class="container-fluid bg-white py-5 scroll-animate">
     <div class="row justify-content-start">
         <div class="col-12 col-lg-8">
             <h2 class="fw-bold mb-3 text-start">Premium Airport Service</h2>
@@ -144,7 +145,7 @@
 <!-- End Premium Airport Service section -->
 
 <!-- Transparent Pricing section -->
-<div class="container-fluid bg-light py-5">
+<div class="container-fluid bg-light py-5 scroll-animate">
     <div class="row justify-content-center">
         <div class="col-12 col-md-10 col-lg-8">
             <div class="card shadow-lg text-center p-4 pav-feature-card">
