--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/css/custom-cards.css" rel="stylesheet">
+    <link href="/css/scroll-animation.css" rel="stylesheet">
     <title>Contact Us | Paul's Taxi</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
 <div id="language-modal"></div>
 
 <!-- Page subject section -->
-<div class="container-fluid text-light d-flex align-items-center justify-content-left"
+<div class="container-fluid text-light d-flex align-items-center justify-content-left scroll-animate"
      style="min-height: 55vh; background: linear-gradient(135deg, #585859 0%, #7dbef3 100%);">
     <div class="text-left">
         <h1 class="display-4 fw-bold mb-4">Get In Touch</h1>
@@ -32,7 +33,7 @@
 <!-- Page subject section -->
 
 <!-- Contact Methods Intro section -->
-<div class="container-fluid bg-light text-dark d-flex flex-column align-items-center justify-content-center pt-5 pb-2">
+<div class="container-fluid bg-light text-dark d-flex flex-column align-items-center justify-content-center pt-5 pb-2 scroll-animate">
     <h2 class="display-6 fw-bold mb-3">Contact Methods</h2>
     <p class="lead fs-5 text-center">
         Choose the contact method that works best for you.
@@ -41,7 +42,7 @@
 <!-- End Contact Methods Intro section -->
 
 <!-- Contact Cards -->
-<div class="container-fluid pb-5 bg-light">
+<div class="container-fluid pb-5 bg-light scroll-animate">
     <div class="row justify-content-center g-4">
         <!-- WhatsApp Card -->
         <div class="col-12 col-md-6 col-lg-3">
@@ -92,7 +93,7 @@
 <!-- End Contact Cards -->
 
 <!-- Send a Message Section -->
-<div class="container py-5">
+<div class="container py-5 scroll-animate">
     <div class="row">
         <div class="col-lg-8">
             <h2 class="fw-bold mb-3">Send us a Message</h2>
@@ -129,7 +130,7 @@
 <!-- End Send a Message Section -->
 
 <!-- FAQ Section -->
-<div class="container-fluid bg-light py-5">
+<div class="container-fluid bg-light py-5 scroll-animate">
     <div class="container">
         <div class="text-center mb-5">
             <h2 class="fw-bold">Frequently Asked Questions</h2>
