--- a/services.html
+++ b/services.html
@@ -8,6 +8,7 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="/css/custom-cards.css" rel="stylesheet">
+    <link href="/css/scroll-animation.css" rel="stylesheet">
     <title>Our Services | Paul's Taxi</title>
     <style>
         .nav-pills .nav-link {
@@ -28,7 +29,7 @@
 <div id="language-modal"></div>
 
 <!-- Page subject section -->
-<div class="container-fluid text-light d-flex align-items-center justify-content-left"
+<div class="container-fluid text-light d-flex align-items-center justify-content-left scroll-animate"
      style="min-height: 55vh; background: linear-gradient(135deg, #585859 0%, #7dbef3 100%);">
     <div class="text-left">
         <h1 class="display-4 fw-bold mb-4">Our Services</h1>
@@ -41,7 +42,7 @@
 <!-- Page subject section -->
 
 <!-- Services Section -->
-<div class="container-fluid bg-light py-5 mb-4">
+<div class="container-fluid bg-light py-5 mb-4 scroll-animate">
     <div class="d-flex justify-content-center mb-4">
         <div class="w-100 overflow-auto">
             <ul class="nav nav-pills flex-nowrap gap-2 justify-content-center" id="services-tabs" role="tablist">
@@ -175,9 +176,10 @@
         </div>
     </div>
 </div>
+<!-- End Services Section -->
 
 <!-- Service Features Section -->
-<div class="container mb-5">
+<div class="container mb-5 scroll-animate">
     <h2 class="display-6 fw-bold text-center mb-4">Service Features</h2>
     <p class="lead text-center mb-5">What makes our service exceptional across all transportation solutions</p>
     <div class="row justify-content-center g-4">
