--- a/services.html
+++ b/services.html
@@ -19,6 +19,11 @@
             background-color: #ffc107;
             color: #000;
         }
+        @media (max-width: 576px) {
+            #services-tabs .nav-item {
+                min-width: .5rem;
+            }
+        }
     </style>
 </head>
 <body>
